# zotero-arxiv-daily-Try

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/: keep-alive.txt
.github/workflows/: ci.yml  main.yml  search-papers.yml  test.yml  track-researchers.yml
config/: base.yaml  custom.yaml  tracking.yaml
papers/daily/: history.json
papers/daily/2026-06-15/: papers.csv  summaries.md
papers/daily/2026-06-16/: papers.csv  summaries.md
papers/daily/2026-06-17/: papers.csv  summaries.md
papers/daily/2026-06-18/: papers.csv  summaries.md
papers/daily/2026-06-19/: papers.csv  summaries.md
papers/daily/2026-06-20/: papers.csv  summaries.md
papers/daily/2026-06-21/: papers.csv  summaries.md
papers/daily/2026-06-22/: papers.csv  summaries.md
papers/daily/2026-06-23/: papers.csv  summaries.md
papers/daily/2026-06-24/: papers.csv  summaries.md
papers/daily/2026-06-25/: papers.csv  summaries.md
papers/daily/2026-06-26/: papers.csv  (+1 more)
papers/tracking/: daily_history.json
scripts/: backfill-daily-artifacts.ps1  register-artifact-sync-task.ps1  search-papers.ps1  sync-action-artifacts.ps1
src/zotero_arxiv_daily/: archive.py  executor.py  history.py  main.py  openalex_search.py  paper_filter.py  protocol.py  scholar_email.py  tracking.py  tracking_csv.py  utils.py
tests/: conftest.py  test_archive.py  test_executor.py  test_history.py  test_openalex_search.py  test_scholar_email.py  test_tracking.py  test_tracking_csv.py
tests/retriever/: test_arxiv_retriever.py  test_official_conference_retriever.py  test_openalex_retriever.py
(+98 files in other folders)
